get and post comment done
