# data/request/comments.go
@@ -1,0 +1,6 @@
+package request
+
+type CommentRequest struct {
+	Message	string	`json:"message" validate:"required"`
+	PhotoId	uint	`json:"photo_id" validate:"required"`
+}
