# data/response/comments.go
@@ -1,0 +1,36 @@
+package response
+
+import "time"
+
+type UserComment struct {
+	Id       uint   `json:"id"`
+	Email    string `json:"email"`
+	Username string `json:"username"`
+}
+
+type PhotoComment struct {
+	Id       uint   `json:"id"`
+	Title    string `json:"title"`
+	Caption  string `json:"caption"`
+	PhotoUrl string `json:"photo_url"`
+	UserId   uint   `json:"user_id"`
+}
+
+type GetComments struct {
+	Id        uint      `json:"id"`
+	Message   string    `json:"message"`
+	PhotoId   uint      `json:"photo_id"`
+	UserId    uint      `json:"user_id"`
+	UpdatedAt time.Time `json:"updated_at"`
+	CreatedAt time.Time `json:"created_at"`
+	User      UserComment
+	Photo     PhotoComment
+}
+
+type PostComment struct {
+	Id        uint      `json:"id"`
+	Message   string    `json:"message"`
+	PhotoId   uint      `json:"photo_url"`
+	UserId    uint      `json:"user_id"`
+	CreatedAt time.Time `json:"created_at"`
+}
